alignment fixes

--- a/whitewaterboise/src/components/statics/WhatIsTMS.css
+++ b/whitewaterboise/src/components/statics/WhatIsTMS.css
@@ -3,11 +3,11 @@
     opacity: 0;
     transform: translateY(50px);
     transition: opacity 1s ease-out, transform 1s ease-out;
-    padding: 100px 20px;
+    padding: 10px 20px;
     background-color: #65a7dd45; /* Soft background for contrast */
     color: #333; /* Dark text for better readability */
     text-align: center;
-    min-height: 100vh;
+    min-height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
